# fast-forth

./: .gitignore  AGENTIC_OPTIMIZATIONS.md  AGGRESSIVE_INLINE_IMPLEMENTATION.md  AGGRESSIVE_INLINE_USAGE_EXAMPLE.rs  BENCHMARK_EXECUTION_SUMMARY.md  CALLING_CONVENTION_BENCHMARK.rs  CALLING_CONVENTION_IMPLEMENTATION.md  CALLING_CONVENTION_QUICK_START.md  CI_CONFIGURATION_SUMMARY.md  CI_QUICK_REFERENCE.md  CLI_SERVER_TEST_REPORT.md  COMPILER_SUMMARY_AND_ANALYTICS.md  COMPLETION_SUMMARY.md  CONCURRENCY_COMPLETE.md  CONCURRENCY_IMPLEMENTATION_GUIDE.md  CONCURRENCY_TRADEOFFS_COMPARISON.md  COVERAGE.md  COVERAGE_ANALYSIS_SUMMARY.md  COVERAGE_AND_FUZZING_ANALYSIS.md  COVERAGE_GAP_ANALYSIS.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  COVERAGE_TEST_ADDITIONS.md  CRANELIFT_VERIFIER_FIX.md  CRITICAL_BUGFIXES.md  Cargo.toml  DATABASE_EQUIVALENT_ANALYSIS.md  DELIVERABLES_SUMMARY.txt  DESTRUCTIVE_TESTING_INFRASTRUCTURE.md  DESTRUCTIVE_TESTS_SUMMARY.md  DIFFERENTIAL_TESTING_REPORT.md  ERROR_HANDLING_TESTS_SUMMARY.md  ERROR_STRESS_TEST_SUMMARY.md  ERROR_TEST_QUICK_REFERENCE.md  EXTENDED_WORDS_IMPLEMENTATION_SUMMARY.md  FFI_IMPLEMENTATION_COMPLETE.md  FUZZING_COMPLETE.md  FUZZING_EFFECTIVENESS_MATRIX.md  FUZZING_INFRASTRUCTURE_SUMMARY.md  FUZZING_QUICKREF.txt  FUZZING_SETUP.md  (+63 more)
.github/workflows/: destructive-tests.yml  fuzz.yml  release.yml  test.yml
backend/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  VERIFICATION_IMPLEMENTATION_SUMMARY.md
backend/docs/: IR_VERIFICATION.md
backend/src/: error.rs  lib.rs
backend/src/codegen/: mod.rs
backend/src/cranelift/: compiler.rs  mod.rs  translator.rs
cli/: COMPLETION_REPORT.md  Cargo.toml  DELIVERABLES_SUMMARY.md  DEVELOPER_EXPERIENCE_DESIGN.md  IMPLEMENTATION_GUIDE.md  INDEX.md  LSP_SPECIFICATION.md  VISUAL_MOCKUPS.md  compiler.rs  execute.rs  main.rs
docs/: ANS_FORTH_COMPLIANCE_REPORT.md  ARCHITECTURE_QUICKSTART.md  BENCHMARK_RESULTS.md  BOOTSTRAPPING_CLARITY.md  CLI_OPTIMIZATION_PACKAGE.md  COMPLIANCE_TEST_SUMMARY.md  CRANELIFT_INTEGRATION_COMPLETE.md  CRANELIFT_OPTIMIZATION_OPTIONS.md  CRANELIFT_RECURSION_QUICKSTART.md  CRANELIFT_RECURSION_RESEARCH.md  ERROR_EXAMPLES.md  FAST_COMPILATION_OPTIONS.md  FFI_AND_FILE_IO_DESIGN.md  FFI_IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS_SUMMARY.md  LLAMA_CLI_IMPLEMENTATION.md  PERFORMANCE_GUIDE.md  PROPERTY_BASED_FUZZING.md  QUICK_REFERENCE.md  QUICK_WIN_SPEED_AND_SIZE.md  README.md  RUST_INTERPRETER_ANALYSIS.md  SELF_CONTAINED_DISTRIBUTION.md  SHARED_LIBRARY_HOTSWAP_DESIGN.md  SHARED_LIBRARY_QUICK_START.md  UPDATE_APPROACHES_COMPARISON.md  abs.html  average.html  cube.html  index.html  square.html
docs/agentic/: AGENT_CONTEXT.md  FEATURES_COMPLETE.md  TESTING_GUIDE.md
docs/architecture/: BACKEND.md  BOOTSTRAPPING_STRATEGY.md  INTEGRATION.md  INTEGRATION_COMPLETE.md
docs/concurrency/: DATABASE_ARCHITECTURE.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT.md
docs/implementation/: AGGRESSIVE_INLINE_SUMMARY.md  PGO.md  PGO_QUICK_START.md
docs/optimizations/stream1/: IMPLEMENTATION.md  QUICK_START.md
docs/optimizations/stream2/: PHASE1.md  (+2 more)
docs/optimizer/: OPTIMIZER_README.md  QUICK_START.md  SUMMARY.txt
docs/performance/: AUDIT_REPORT.md  BENCHMARK_REPORT.md  MULTIPLIERS.md
docs/testing/: QUICK_REFERENCE.md
frontend/src/: error.rs  lib.rs  parser.rs  semantic.rs  ssa.rs  stack_effects.rs
frontend/tests/: PARSER_EDGE_CASE_COVERAGE.md
fuzz/: README.md
minimal_forth/: forth
optimizer/src/: codegen.rs  constant_fold.rs  dead_code.rs  ir.rs  lib.rs  memory_opt.rs  pgo_superinstructions.rs  superinstructions.rs  type_specialization.rs  zero_cost.rs
optimizer/tests/: pgo_integration_tests.rs  type_specialization_tests.rs
release/: README.md
runtime/: bootstrap.c  forth_runtime.h  memory.c
runtime/tests/: Makefile  test_concurrency
src/: backend.rs  error.rs  lib.rs  main.rs  pipeline.rs
src/codegen/: mod.rs  spec_gen.rs
src/inference/: engine.rs  mod.rs  types.rs
src/patterns/: database.rs  mod.rs
src/provenance/: extraction.rs
src/server/: routes.rs
src/spec/: mod.rs  validator.rs
src/symbolic/: equivalence.rs  executor.rs
tests/compliance/: ans_forth_core.rs  ans_forth_extended.rs
tests/correctness/: differential_testing.rs
tests/fuzz/: Cargo.toml
tinycc/: README.md
(+20 files in other folders)
